<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch_id"
        android:layout_marginTop="50dp"
        android:text="@string/switch_off_on"
        app:theme="@style/SwitchTheme"
        android:layout_centerHorizontal="true"
        android:checked="false"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/checkbox_id"
        android:text="@string/checkbox"
        app:theme="@style/CheckBoxTheme"
        android:checked="false"/>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox_id"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/radio_button"
        android:id="@+id/radioButton1"
        app:theme="@style/RadioButtonTheme"
        android:checked="false"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/radioGroup_id"
        android:layout_below="@+id/radioButton1"
        android:layout_centerHorizontal="true">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/radio_button_1"
            android:id="@+id/radioGroupButton1"
            app:theme="@style/RadioGroupButtonTheme"
            android:checked="false"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/radio_button_2"
            android:id="@+id/radioGroupButton2"
            app:theme="@style/RadioGroupButtonTheme"
            android:checked="false"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/radio_button_3"
            android:id="@+id/radioGroupButton3"
            app:theme="@style/RadioGroupButtonTheme"
            android:checked="false"/>

    </RadioGroup>


</RelativeLayout>